crates/wgso/tests/cases_invalid/duplicated_shaders/.expected
error: same name `duplicated` used for two shaders
 --> ./tests/cases_invalid/duplicated_shaders/in_different_file.wgsl:1:2
  |
1 | #shader<compute> duplicated
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^ first definition
  |
 ::: ./tests/cases_invalid/duplicated_shaders/inside_same_file.wgsl:1:2
  |
1 | #shader<compute> duplicated
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^ second definition
  |
error: same name `duplicated` used for two shaders
 --> ./tests/cases_invalid/duplicated_shaders/in_different_file.wgsl:1:2
  |
1 | #shader<compute> duplicated
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^ first definition
  |
 ::: ./tests/cases_invalid/duplicated_shaders/inside_same_file.wgsl:2:2
  |
2 | #shader<compute> duplicated
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^ second definition
  |